hphp/hack/test/typecheck/array/safe_vector_array/darray_with_array_map_does_not_return_vect_like_array.php
<?hh // strict

function providesDictLikeArray(): varray<bool> {
  return array_map($x ==> $x, darray["foo" => true, "bar" => false]);
}
